Fix avatar status badge being cut off in Mentioning Help page

--- a/webapp/channels/src/components/help/help.scss
+++ b/webapp/channels/src/components/help/help.scss
@@ -303,15 +303,14 @@
     }
 
     &__example-avatar {
-        overflow: hidden;
+        position: relative;
         width: 36px;
         height: 36px;
         flex-shrink: 0;
-        border-radius: 50%;
 
         svg {
-            width: 100%;
-            height: 100%;
+            width: 36px;
+            height: 36px;
         }
     }
 
